--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.2'
     compile files('libs/butterknife-5.1.2.jar')
+    compile files('libs/android-support-v7-cardview.jar')
+    compile files('libs/android-support-v7-recyclerview.jar')
 }
