1、初步调整目录结构 2、将recyclerView和cardView引入到对应的listview item点击事件中

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".fragment.custcollect.android5p0.recyclerView.RecyclerViewActivity"/>
+        <activity android:name=".fragment.custcollect.android5p0.cardView.CardViewActivity"/>
+        <activity android:name=".fragment.custcollect.android5p0.NewControlsActivity"/>
+
     </application>
 
 </manifest>
