--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity android:name=".fragment.custcollect.android5p0.recyclerView.RecyclerViewActivity"/>
         <activity android:name=".fragment.custcollect.android5p0.cardView.CardViewActivity"/>
         <activity android:name=".fragment.custcollect.android5p0.NewControlsActivity"/>
-
+        <activity android:name=".fragment.custcollect.listview.ListViewActivity"/>
     </application>
 
 </manifest>
