--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.2'
-    compile files('libs/butterknife-5.1.2.jar')
+    compile 'com.jakewharton:butterknife:6.1.0'
     compile files('libs/android-support-v7-cardview.jar')
     compile files('libs/android-support-v7-recyclerview.jar')
 }
