--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ly.cc">
 
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -9,6 +14,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,10 +22,12 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".fragment.custcollect.android5p0.recyclerView.RecyclerViewActivity"/>
-        <activity android:name=".fragment.custcollect.android5p0.NewControlsActivity"/>
-        <activity android:name=".fragment.custcollect.listview.ListViewActivity"/>
-        <activity android:name=".fragment.function.GravitySensorActivity"/>
+        <activity android:name=".fragment.custcollect.android5p0.recyclerView.RecyclerViewActivity" />
+        <activity android:name=".fragment.custcollect.android5p0.NewControlsActivity" />
+        <activity android:name=".fragment.custcollect.listview.ListViewActivity" />
+        <activity
+            android:name=".fragment.function.GravitySensorActivity"
+            android:configChanges="orientation|keyboardHidden|navigation|screenSize" />
 
     </application>
 
