--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -14,21 +13,25 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".fragment.custcollect.android5p0.recyclerView.RecyclerViewActivity" />
         <activity android:name=".fragment.custcollect.android5p0.NewControlsActivity" />
-        <activity android:name=".fragment.custcollect.listview.ListViewActivity" />
+        <activity
+            android:name=".fragment.custcollect.listview.ListViewActivity"
+            android:label="@string/title_activity_list_view_activity" />
         <activity
             android:name=".fragment.function.GravitySensorActivity"
             android:configChanges="orientation|keyboardHidden|navigation|screenSize" />
-
+        <activity
+            android:name=".fragment.custcollect.listview.ListViewBothActivity"
+            android:label="@string/title_activity_list_view_both"/>
     </application>
 
 </manifest>
