集成HorizontalListView控件到项目中

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
             android:name=".fragment.custcollect.listview.ListViewHeaderActivity"
             android:label="@string/title_activity_list_view_header" >
         </activity>
+        <activity
+            android:name=".fragment.custcollect.listview.HorizontalListViewActivity"
+            android:label="@string/title_activity_horizontal_list_view" >
+        </activity>
     </application>
 
 </manifest>
