--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
     }
 }
 
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.2'
@@ -27,4 +28,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:6.1.0'
     compile files('libs/android-support-v7-cardview.jar')
     compile files('libs/android-support-v7-recyclerview.jar')
+    compile 'com.nineoldandroids:library:2.4.0+'
 }
