--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     defaultConfig {
         applicationId "com.ly.cc"
         minSdkVersion 11
-        targetSdkVersion 21
+        targetSdkVersion 10
         versionCode 1
         versionName "1.0"
     }
@@ -22,7 +22,7 @@ android {
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.2'
     compile 'se.emilsjolander:stickylistheaders:2.5.1'
     compile 'com.jakewharton:butterknife:6.1.0'
