--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile files('libs/android-support-v7-cardview.jar')
     compile files('libs/android-support-v7-recyclerview.jar')
     compile 'com.nineoldandroids:library:2.4.0+'
+    compile 'com.facebook.rebound:rebound:0.3.+'
 }
