--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ly.cc">
+    package="com.ly.cc" >
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
@@ -10,11 +10,11 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,14 +34,18 @@
             android:label="@string/title_activity_list_view_both" />
         <activity
             android:name=".fragment.custcollect.listview.ListViewHeaderActivity"
-            android:label="@string/title_activity_list_view_header"/>
+            android:label="@string/title_activity_list_view_header" />
         <activity
             android:name=".fragment.custcollect.listview.HorizontalListViewActivity"
-            android:label="@string/title_activity_horizontal_list_view"/>
+            android:label="@string/title_activity_horizontal_list_view" />
         <activity
             android:name=".fragment.custcollect.listview.swipe.activities.SwipeListViewActivity"
-            android:label="@string/title_activity_swipe_list_view"/>
-        <activity android:name="com.ly.cc.fragment.custcollect.listview.swipe.activities.SettingsActivity" />
+            android:label="@string/title_activity_swipe_list_view" />
+        <activity android:name=".fragment.custcollect.listview.swipe.activities.SettingsActivity" />
+        <activity
+            android:name=".fragment.custcollect.toggleBtn.MainActivity"
+            android:label="@string/title_activity_main" >
+        </activity>
     </application>
 
 </manifest>
