--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ly.cc" >
+    package="com.ly.cc">
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,7 +27,8 @@
         <activity android:name=".fragment.custcollect.android5p0.recyclerView.RecyclerViewActivity" />
         <activity android:name=".fragment.custcollect.android5p0.NewControlsActivity" />
         <activity
-            android:name=".fragment.custcollect.listview.MainActivity"
+            android:name=".fragment.custcollect.listview.ListViewListActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_list_view_activity" />
         <activity
             android:name=".fragment.function.GravitySensorActivity"
@@ -43,9 +47,16 @@
             android:label="@string/title_activity_swipe_list_view" />
         <activity android:name=".fragment.custcollect.listview.swipe.activities.SettingsActivity" />
         <activity
-            android:name=".fragment.custcollect.toggleBtn.MainActivity"
-            android:label="@string/title_activity_main" >
-        </activity>
+            android:name=".fragment.custcollect.toggleBtn.ToggleBtnMainActivity"
+            android:label="ToggleBtnMainActivity" />
+        <activity
+            android:name=".fragment.custcollect.timeline.TimelineListActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_timeline_list" />
+        <activity
+            android:name=".fragment.custcollect.timeline.HorizontalTimelineActivity"
+            android:screenOrientation="landscape"
+            android:label="HorizontalTimelineActivity" />
     </application>
 
 </manifest>
