--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ly.cc" >
+    package="com.ly.cc">
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
@@ -12,11 +12,11 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -63,8 +63,8 @@
         <activity android:name=".fragment.custcollect.timeline.VerticalTimelineActivity" />
         <activity
             android:name=".fragment.custcollect.slidemenu.SlideMenuQQ5Activity"
-            android:label="@string/title_activity_slide_menu_qq5" >
-        </activity>
+            android:label="@string/title_activity_slide_menu_qq5"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
