--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,20 +6,21 @@ android {
     defaultConfig {
         applicationId "com.ly.cc"
         minSdkVersion 21
-        targetSdkVersion 10
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
     productFlavors {
     }
 }
-
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -31,4 +32,5 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0+'
     compile 'com.facebook.rebound:rebound:0.3.+'
     compile 'com.google.code.gson:gson:2.3.1'
+    compile 'de.greenrobot:eventbus:2.4.0'
 }
