完成图像色彩变化的集成

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
 .gradle
 /local.properties
 /.idea/workspace.xml
-/.idea/libraries
 .DS_Store
 /build
 
-.idea/modules.xml
-.idea/misc.xml
-.idea/vcs.xml
 CC.iml
+.idea
+.gitignore
