--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ly.cc">
+    package="com.ly.cc" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
@@ -12,11 +14,11 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -94,10 +96,15 @@
         <activity
             android:name=".view.custom_controls.imagePainting.ImageMatrixTestActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".view.custom_controls.imagePainting.RoundRectXfermodTestActivity"/>
-        <activity android:name=".view.custom_controls.imagePainting.BitmapShaderTestActivity"/>
-        <activity android:name=".view.custom_controls.imagePainting.ReflectViewTestActivity"/>
-        <activity android:name=".view.custom_controls.imagePainting.MeshViewTestActivity"/>
+        <activity android:name=".view.custom_controls.imagePainting.RoundRectXfermodTestActivity" />
+        <activity android:name=".view.custom_controls.imagePainting.BitmapShaderTestActivity" />
+        <activity android:name=".view.custom_controls.imagePainting.ReflectViewTestActivity" />
+        <activity android:name=".view.custom_controls.imagePainting.MeshViewTestActivity" />
+        <activity
+            android:name=".view.thirdsdk.FaceppTestYourFaceActivity"
+            android:configChanges="orientation|keyboardHidden|navigation|screenSize"
+            android:label="@string/title_activity_facepp_test_your_face" >
+        </activity>
     </application>
 
 </manifest>
