--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ly.cc" >
+    package="com.ly.cc">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -23,7 +23,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
 
         <meta-data
             android:name="com.amap.api.v2.apikey"
@@ -32,7 +32,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -121,11 +121,22 @@
         <activity android:name=".view.custom_controls.flow_view.FlowActivity" />
         <activity
             android:name=".view.custom_controls.imagePainting.ShapeImageViewActivity"
-            android:label="@string/title_activity_shape_image_view" >
-        </activity> <activity
+            android:label="@string/title_activity_shape_image_view" />
+        <activity
             android:name=".view.thirdsdk.amap.NetLocationActivity"
-            android:label="@string/title_activity_shape_image_view" >
-        </activity>
+            android:label="@string/title_activity_shape_image_view" />
+        <activity
+            android:name=".view.thirdsdk.amap.AMapLocationActivity"
+            android:label="AMapLocationActivity" />
+        <activity
+            android:name=".view.thirdsdk.amap.CurrentWeatherReportActivity"
+            android:label="CurrentWeatherReportActivity" />
+        <activity
+            android:name=".view.thirdsdk.amap.FutureWeatherReportActivity"
+            android:label="FutureWeatherReportActivity" />
+        <activity
+            android:name=".view.thirdsdk.amap.GPSLocationActivity"
+            android:label="GPSLocationActivity" />
     </application>
 
 </manifest>
