--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,16 @@ android {
         }
     }
 
+    // java版本
+    compileOptions {
+//        sourceCompatibility JavaVersion.VERSION_1_8
+//        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    lintOptions {
+        abortOnError false
+    }
+
     productFlavors {
     }
 }
