--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.application'
 
+apply plugin: 'android-apt'
+def AAVersion = '3.3.1'
+
 android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
@@ -35,19 +38,30 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'se.emilsjolander:stickylistheaders:2.5.1'
-    compile 'com.jakewharton:butterknife:6.1.0'
     compile files('libs/android-support-v7-cardview.jar')
     compile files('libs/android-support-v7-recyclerview.jar')
+    compile files('libs/faceppsdk.jar')
+    compile files('libs/libammsdk.jar')
+    compile files('libs/Android_Location_V1.3.2.jar')
+    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'se.emilsjolander:stickylistheaders:2.5.1'
+    compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.nineoldandroids:library:2.4.0+'
     compile 'com.facebook.rebound:rebound:0.3.+'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile files('libs/faceppsdk.jar')
-    compile files('libs/libammsdk.jar')
     compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
-    compile files('libs/Android_Location_V1.3.2.jar')
     compile 'me.zhanghai.android.materialprogressbar:library:1.0.2'
+
+    apt "org.androidannotations:androidannotations:$AAVersion"
+    compile "org.androidannotations:androidannotations-api:$AAVersion"
+}
+
+apt {
+    arguments {
+        //androidManifestFile variant.processResources.manifestFile
+        androidManifestFile variant.outputs[0].processResources.manifestFile
+        resourcePackageName 'com.ly.cc'
+    }
 }
