--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ly.cc">
+    package="com.ly.cc" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -18,13 +18,11 @@
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/ActionBarTheme">
-
+        android:theme="@style/ActionBarTheme" >
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="a7f1ab49955fa876cde2ee18efba69d4" />
@@ -32,7 +30,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -146,6 +144,10 @@
         <activity
             android:name=".view.custom_controls.android5p0.ProgressBarActivity"
             android:label="ProgressBarActivity" />
+        <activity
+            android:name=".view.custom_controls.viewpager.ViewPagerWithTranformAnimActivity"
+            android:label="@string/title_activity_view_pager_with_tranform_anim" >
+        </activity>
     </application>
 
 </manifest>
