--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,10 @@ android {
     }
 }
 
+repositories {
+    jcenter()
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/android-support-v7-cardview.jar')
@@ -55,6 +59,7 @@ dependencies {
     compile 'me.zhanghai.android.materialprogressbar:library:1.0.2'
     apt "org.androidannotations:androidannotations:$AAVersion"
     compile "org.androidannotations:androidannotations-api:$AAVersion"
+    compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
 }
 
 apt {
