--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -150,13 +150,21 @@
         </activity>
         <activity
             android:name=".view.custom_controls.viewpager.JazzyViewPagerTestActivity"
-            android:theme="@style/Base.TextAppearance.AppCompat.Title.Inverse"
-            android:label="@string/title_activity_jazzy_view_pager_test" >
+            android:label="@string/title_activity_jazzy_view_pager_test"
+            android:theme="@style/Base.TextAppearance.AppCompat.Title.Inverse" >
         </activity>
         <activity
             android:name=".view.custom_controls.android5p0.MaterialDesignActivity"
-            android:theme="@style/AppTheme"
-            android:label="MaterialDesignActivity" >
+            android:label="MaterialDesignActivity"
+            android:theme="@style/AppTheme" >
+        </activity>
+        <activity
+            android:name=".view.custom_controls.viewpager.ViewPagerTestActivity"
+            android:label="@string/title_activity_view_pager_test" >
+        </activity>
+        <activity
+            android:name=".view.custom_controls.viewpager.SmartTagLayoutActivity"
+            android:label="@string/title_activity_smart_tag_layout" >
         </activity>
     </application>
 
