--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".MyApplication"
@@ -169,8 +170,10 @@
         <activity android:name=".view.function.PlayVideoListActivity" />
         <activity
             android:name=".view.function.PlayVideoByVideoViewActivity"
-            android:label="@string/title_activity_play_video_by_video_view" >
-        </activity>
+            android:label="@string/title_activity_play_video_by_video_view" />
+        <activity
+            android:name=".view.function.PlayVideoByVMediaPlayerActivity"
+            android:label="PlayVideoByVMediaPlayerActivity" />
     </application>
 
 </manifest>
