--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ def AAVersion = '3.3.1'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.ly.cc"
